# ROS-Masterclass

./: README.md
Session_01/: Session-01-README.md  robot.py
Session_07/slam_toolbox_demo/: CMakeLists.txt  README.md  Session_07_README.md  package.xml
Session_07/slam_toolbox_demo/config/: slam_toolbox_localization.yaml
Session_07/slam_toolbox_demo/posegraph/: turtlebot3_world.data  turtlebot3_world.posegraph
Session_08/: README.md
Session_08/robot_navigation/: CMakeLists.txt  package.xml
Session_08/robot_navigation/config/: amcl.yaml
Session_08/robot_navigation/launch/: amcl.launch.py
Session_08/robot_navigation/map/: turtlebot3_world_map.pgm  turtlebot3_world_map.yaml
Session_3/turtlebot_delivery_Assigment3b/: README.md
Session_3/turtlebot_delivery_Assigment3b/delivery_mission_controller/: package.xml  setup.py
Session_3/turtlebot_delivery_Assigment3b/delivery_mission_controller/delivery_mission_controller/: delivery_mission_node.py
Session_3/turtlebot_delivery_Assigment3b/delivery_mission_interfaces/: CMakeLists.txt  package.xml
Session_3/turtlebot_delivery_Assigment3b/delivery_mission_interfaces/action/: DeliveryMission.action
Session_3/turtlebot_operation_Assigment3a/: README.md
Session_3/turtlebot_operation_Assigment3a/obstacle_direction_controller/: package.xml  setup.py
Session_3/turtlebot_operation_Assigment3a/obstacle_direction_controller/obstacle_direction_controller/: direction_autopilot_node.py
Session_3/turtlebot_operation_Assigment3a/obstacle_direction_interfaces/: CMakeLists.txt  package.xml
Session_5/my_robot_description/my_robot_description/: CMakeLists.txt  README.md  package.xml
Session_5/my_robot_description/my_robot_description/launch/: display.launch.py
Session_5/my_robot_description/my_robot_description/urdf/: robot_description.urdf.xacro
Session_6/my_robot_description/: CMakeLists.txt  README.md  package.xml
Session_6/my_robot_description/config/: gz_bridge.yaml
Session_6/my_robot_description/launch/: display.launch.py  gazebo.launch.py
Session_6/my_robot_description/rviz/: robot_view.rviz
Session_6/my_robot_description/urdf/: robot.gazebo.xacro  robot.urdf.xacro
Session__02/: Terminal Screen Recording
Session__02/turtlebot_controller/turtlebot_controller/: README.md  package.xml  setup.py
Session__02/turtlebot_controller/turtlebot_controller/turtlebot_controller/: turtlebot_controller.py  turtlebot_monitor.py
